force-app/main/default/objects/Kouza__c/Kouza__c.object-meta.xml
<CustomObject>
    <label>口座</label>
    <nameField>
        <label>口座コード</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>