force-app/main/default/objects/Kouza__c/fields/kinkou__c.field-meta.xml
<CustomField>
    <fullName>kinkou__c</fullName>
    <label>銀行</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>