force-app/main/default/objects/Kouza__c/fields/kouzaBango__c.field-meta.xml
<CustomField>
    <fullName>kouzaBango__c</fullName>
    <label>口座番号</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>