force-app/main/default/objects/Kouza__c/fields/kouzaMeigi__c.field-meta.xml
<CustomField>
    <fullName>kouzaMeigi__c</fullName>
    <label>名義</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>