force-app/main/default/objects/Kouza__c/fields/kouzaMeisyo__c.field-meta.xml
<CustomField>
    <fullName>kouzaMeisyo__c</fullName>
    <label>口座名称</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>