force-app/main/default/objects/Kouza__c/fields/siten__c.field-meta.xml
<CustomField>
    <fullName>siten__c</fullName>
    <label>支店</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>